# foreachBatch_db_connect_issue

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/my_project/: __main__.py  my_module.py
